ipc/ipdl/test/ipdl/error/undeclProtocol.ipdl
//error: protocol `undeclared', managed by `undeclProtocol', has not been declared

protocol undeclProtocol {
    manages undeclared;

child:
    async undeclared();
};
